2008-04-08  Kolja Waschk <kawk>

   * src/cmd/idcode.c: [ 1936543 ] Check for set-up cable in idcode (U.Bonnes)

2008-04-05  Kolja Waschk <kawk>

   * src/tap/cable/usbblaster.c: [ 1934843 ] Fix for USBBLASTER (U.Bonnes)
   * src/jtag.c: [ 1933141 ] Don't add duplicate history lines (U.Bonnes)

2008-04-03  Kolja Waschk <kawk>

   * src/jtag.c: Optionally use JTAG_PROMPT environment setting for
     prompt instead of "jtag>" (by Mike Frysinger)

   * include/jtag.h, src/cmd/jtag_data_dir.c, src/cmd/include.c,
     src/cmd/Makefile.am, src/bsdl/Makefile.am, src/bsdl/bsdl_flex.l,
     src/lib/make-relative-prefix.c, src/lib/safe-ctype.h,
     src/lib/lbasename.c, src/lib/Makefile.am, src/lib/filenames.h,
     src/lib/lrealpath.c, src/jtag.c, configure.ac:
     [ 1916428 ] support runtime-relocatable urjtag (by Mike Frysinger)

   * include/jtag.h, src/cmd/cmd.c, src/cmd/idcode.c, src/cmd/Makefile.am,
     src/tap/parport/ftdi.c, src/tap/idcode.c, src/tap/Makefile.am, THANKS:
     [ 1933730 ] new "idcode" command (by Uwe Bonnes)

2008-04-03  Arnim Laeuger  <arniml@users.sourceforge.net>

   [ 1929235 ] Use less global and static variables:
   * src/bus/jopcyc.c, src/bus/zefant-xs3.c: made global variable
     last_address local
   * src/svf/svf.c, src/svf/svf.h: support reentrant parser and scanner
   * src/svf/svf_bison.y: provisions for reentrant parser
   * src/svf/svf_flex.l: made scanner reentrant
   * src/svf/Makefile.am: removed command line options for
     bison and flex
   * configure.ac: require flex 2.5.33 also for SVF scanner
   * doc/UrJTAG.txt: document flex version for SVF scanner

2008-04-02  Arnim Laeuger  <arniml@users.sourceforge.net>

   [ 1929235 ] Use less global and static variables:
   * src/bsdl/bsdl.c, src/cmd/bsdl.c: use globals from chain_t
   * src/tap/chain.c (chain_alloc): init BSDL globals
   * include/chain.h: added bsdl_globs_t to chain_t
   * include/bsdl.h: defined structure for BSDL globals